--- a/learn-certs-pr/courses/sc-200t00.yml
+++ b/learn-certs-pr/courses/sc-200t00.yml
@@ -3,12 +3,12 @@ title: Microsoft Security Operations Analyst
 metadata:
   title: 'Kurs SC-200T00--A: Microsoft Security Operations Analyst'
   description: 'Kurs SC-200T00--A: Microsoft Security Operations Analyst'
-  ms.openlocfilehash: 6b2a4143e7360599484f1dd6dbb8adfc41aba089
-  ms.sourcegitcommit: 4e7b3b6a21aeb60353d966b21e98cffa92a846c2
+  ms.openlocfilehash: 716264b229ce80af67f81c5edff706dbd06d7829
+  ms.sourcegitcommit: 7e6fc74e4763408d05db0d7f5b43abda1533e6e7
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/31/2022
-  ms.locfileid: "137892377"
+  ms.lasthandoff: 02/04/2022
+  ms.locfileid: "138019147"
 uid: course.sc-200t00
 courseNumber: SC-200T00
 hoursToComplete: 96
@@ -45,6 +45,9 @@ skillsGained:
 learningPartnersLink: /learn/certifications/partners
 locales:
 - en
+- zh-cn
+- ja
+- ko
 levels:
 - intermediate
 roles:
@@ -594,7 +597,7 @@ outlineSection: >-
   ### <a name="module-8-perform-threat-hunting-in-microsoft-sentinel"></a>Modul 8: Ausführen von Bedrohungssuche in Microsoft Sentinel
 
 
-  In diesem Modul erfahren Sie, wie Sie mithilfe von Azure Sentinel-Abfragen proaktiv Bedrohungsverhaltensweisen identifizieren können. Außerdem lernen Sie, Lesezeichen und Livestreams zum Suchen von Bedrohungen zu verwenden. Sie erfahren auch, wie Sie Notebooks in Azure Sentinel für die erweiterte Bedrohungssuche verwenden.
+  In diesem Modul erfahren Sie, wie Sie mithilfe von Microsoft Sentinel-Abfragen proaktiv Bedrohungsverhaltensweisen identifizieren können. Außerdem lernen Sie, Lesezeichen und Livestreams zum Suchen von Bedrohungen zu verwenden. Außerdem erfahren Sie, wie Sie Notebooks in Microsoft Sentinel für die erweiterte Bedrohungssuche verwenden.
 
 
   #### <a name="lessons"></a>Lektionen
