--- a/learn-certs-pr/courses/dp-900t00.yml
+++ b/learn-certs-pr/courses/dp-900t00.yml
@@ -1,14 +1,15 @@
 ### YamlMime:Course
-title: 'Microsoft Azure-Datengrundlagen '
+title: Microsoft Azure-Datengrundlagen
 metadata:
-  title: 'Course DP-900T00-A: Microsoft Azure Data Fundamentals '
-  description: 'Course DP-900T00-A: Microsoft Azure Data Fundamentals '
-  ms.openlocfilehash: d839f08c28a29425ca897db434d71b96e934497f
-  ms.sourcegitcommit: 7d58303fd1a712a89a6ae3b5b62a972702f71b13
-  ms.translationtype: MT
+  title: 'Course DP-900T00-A: Microsoft Azure Data Fundamentals'
+  description: 'Course DP-900T00-A: Microsoft Azure Data Fundamentals'
+  iltScheduling: true
+  ms.openlocfilehash: 6700a0b1467902c4b0e86dc9401d31715939ce1c
+  ms.sourcegitcommit: 7e6fc74e4763408d05db0d7f5b43abda1533e6e7
+  ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/19/2022
-  ms.locfileid: "136970823"
+  ms.lasthandoff: 02/04/2022
+  ms.locfileid: "138018951"
 uid: course.dp-900t00
 courseNumber: DP-900T00
 hoursToComplete: 24
@@ -21,6 +22,18 @@ skillsGained:
 learningPartnersLink: /learn/certifications/partners
 locales:
 - en
+- ar
+- zh-cn
+- zh-tw
+- fr
+- de
+- id
+- it
+- ja
+- ko
+- pt-br
+- ru
+- es
 levels:
 - beginner
 roles:
@@ -73,7 +86,7 @@ outlineSection: >-
   *   Wichtige Datenkonzepte
 
 
-  *   Untersuchen von Rollen und Verantwortlichkeiten in der Datenwelt
+  *   Einblick in die Rollen und Verantwortlichkeiten in der Welt der Daten
 
 
   *   Konzepte von nicht relationalen Daten
@@ -159,7 +172,7 @@ outlineSection: >-
   *   Sie erläutern die Bereitstellung nicht relationaler Datenbanken in Azure.
 
 
-  *   Sie beschreiben nicht relationale Datenspeicher in Azure.
+  *   Beschreiben nicht relationaler Datenspeicher in Azure
 
 
 
