--- a/learn-certs-pr/courses/ms-900t01.yml
+++ b/learn-certs-pr/courses/ms-900t01.yml
@@ -3,12 +3,13 @@ title: Grundlagen zu Microsoft 365
 metadata:
   title: 'Kurs MS-900T01--A: Microsoft 365 Fundamentals'
   description: 'Kurs MS-900T01--A: Microsoft 365 Fundamentals'
-  ms.openlocfilehash: f1447c156d30550bc09ec29faab6789ac7d81de9
-  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
-  ms.translationtype: MT
+  iltScheduling: true
+  ms.openlocfilehash: f632334638c5235e9f26e2abe9ac3b4aa8a21cb8
+  ms.sourcegitcommit: 7e6fc74e4763408d05db0d7f5b43abda1533e6e7
+  ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/28/2021
-  ms.locfileid: "132113085"
+  ms.lasthandoff: 02/04/2022
+  ms.locfileid: "138018982"
 uid: course.ms-900t01
 courseNumber: MS-900T01
 hoursToComplete: 24
@@ -27,6 +28,17 @@ skillsGained:
 learningPartnersLink: /learn/certifications/partners
 locales:
 - en
+- ar
+- zh-cn
+- zh-tw
+- fr
+- de
+- it
+- ja
+- ko
+- pt-br
+- ru
+- es
 levels:
 - beginner
 roles:
@@ -61,7 +73,7 @@ outlineSection: >-
   *   Produktivitäts- und Teamwork-Lösungen in Microsoft 365
 
 
-  *   Einbinden Ihrer Mitarbeiter in Microsoft Stream, Teams und Yammer
+  *   Einbinden von Mitarbeiter*innen über Microsoft Teams, Viva und Yammer
 
 
   *   Erledigen Sie mehr mit Office auf allen Geräten
@@ -124,22 +136,22 @@ outlineSection: >-
   #### <a name="lessons"></a>Lektionen
 
 
-  *   Sicherheitsprinzipien und Lösungsbereiche
+  *   Beschreiben der Sicherheits- und Complianceprinzipien von Microsoft
 
 
-  *   Identitäts- und Zugriffsverwaltung
+  *   Beschreiben von Funktionen für Identitäts- und Zugriffsverwaltung in Microsoft 365
 
 
-  *   Bedrohungsschutz
+  *   Beschreiben von Bedrohungsschutz
 
 
-  *   Cloudsicherheit
+  *   Beschreiben der Cloudsicherheit
 
 
-  *   Informationsschutz und Governance
+  *   Beschreiben von Informationsschutz und Governance
 
 
-  *   Complianceverwaltung
+  *   Beschreiben der Complianceverwaltung
 
 
   *   Verwalten von Risiken, Ermittlung und Audits
