--- a/learn-certs-pr/exams/ms-101.yml
+++ b/learn-certs-pr/exams/ms-101.yml
@@ -3,27 +3,27 @@ title: Microsoft 365 Mobilität und Sicherheit
 metadata:
   title: 'Examen MS-101: Microsoft 365 Mobility and Security'
   description: 'Examen MS-101: Microsoft 365 Mobility and Security'
-  ms.openlocfilehash: 3ce52d03b8d680a1dd1db80e944becb8850942af
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  ms.openlocfilehash: 00124e220be51f3668db19356123f66d0d8b0f5a
+  ms.sourcegitcommit: 7e6fc74e4763408d05db0d7f5b43abda1533e6e7
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137659170"
+  ms.lasthandoff: 02/04/2022
+  ms.locfileid: "138019092"
 uid: exam.ms-101
 displayName: MS-101
-summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Prüfung wird am 2. Februar 2022 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\nKandidat*innen für dieses Examen sind Microsoft 365 Enterprise-Administrator*innen, die an der Bewertung, Planung, Migration, Bereitstellung und Verwaltung von Microsoft 365-Diensten mitwirken. Sie führen Mandantenverwaltungsaufgaben in Microsoft 365 für Unternehmen aus, die sich auf Identitäten, Sicherheit, Compliance und unterstützenden Technologien beziehen.\n\nKandidat*innen verfügen über Berufserfahrung mit Microsoft 365-Workloads und sollten mindestens als Administrator*in für die Bereitstellung von Exchange, SharePoint, Teams oder Windows 10 tätig gewesen sein. Kandidat*innen sollten auch über Berufserfahrung im Bereich Netzwerke, Serververwaltung und IT-Grundlagen wie DNS, Active Directory Domain Services und PowerShell verfügen."
+summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieses Examens wurde am 2. Februar 2022 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> Notwendige Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\n<br/>  \nKandidat*innen für dieses Examen sind Microsoft 365 Enterprise-Administrator*innen, die an der Bewertung, Planung, Migration, Bereitstellung und Verwaltung von Microsoft 365-Diensten mitwirken. Sie führen Mandantenverwaltungsaufgaben in Microsoft 365 für Unternehmen aus, die sich auf Identitäten, Sicherheit, Compliance und unterstützenden Technologien beziehen.\n\nKandidat*innen verfügen über Berufserfahrung mit Microsoft 365-Workloads und sollten mindestens als Administrator*in für die Bereitstellung von Exchange, SharePoint, Teams oder Windows 10 tätig gewesen sein. Kandidat*innen sollten auch über Berufserfahrung im Bereich Netzwerke, Serververwaltung und IT-Grundlagen wie DNS, Active Directory Domain Services und PowerShell verfügen."
 subTitle: 'In diesem Examen wird Ihre Fähigkeit bewertet, die folgenden technischen Aufgaben auszuführen: Implementieren moderner Gerätedienste, Implementieren der Microsoft 365 Sicherheits- und Bedrohungsverwaltung und Verwalten von Microsoft 365 Governance und Compliance.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHZ
 practiceTestUrl: https://us.mindhub.com/p/MU-MS-101?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MS-101&examname=Exam%20MS-101:%20Microsoft%20365%20Mobility%20and%20Security&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-101
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MS-101&examname=Exam%20MS-101:%20Microsoft%20365%20Mobility%20and%20Security&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-101
 locales:
 - en
 - ja
 levels:
 - advanced
 skills:
-- The English language version of this exam will be updated on February 2, 2022. Please download the exam skills outline below to see what’s changing.
+- The English language version of this exam was updated on February 2, 2022. Please download the exam skills outline below to see what changed.
 - Implement modern device services (40-45%)
 - Implement Microsoft 365 security and threat management (20-25%)
 - Manage Microsoft 365 governance and compliance (35-40%)
