--- a/learn-certs-pr/m365-enterprise-administrator/index.yml
+++ b/learn-certs-pr/m365-enterprise-administrator/index.yml
@@ -3,19 +3,19 @@ title: 'Microsoft 365 Certified: Enterprise Administrator Expert'
 metadata:
   title: 'Microsoft 365 Certified: Enterprise Administrator Expert'
   description: Microsoft 365 Enterprise Administrators sind Teil der Vorgänge zum Bewerten, Planen, Migrieren, Bereitstellen und Verwalten von Microsoft 365-Diensten.
-  ms.openlocfilehash: afdf30fbd0ed9d4a0c6bbf494acc03f3d04d25fd
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  ms.openlocfilehash: 96bef1097adabce322e7ea0697a9f462c665f038
+  ms.sourcegitcommit: 7e6fc74e4763408d05db0d7f5b43abda1533e6e7
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137659324"
+  ms.lasthandoff: 02/04/2022
+  ms.locfileid: "138019125"
 uid: certification.m365-enterprise-administrator
 certificationRenewalUid: renewal.m365-enterprise-administrator
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: >-
   > [!IMPORTANT]
 
-  > Die englischsprachige Version dieser Zertifizierung wird in Kürze aktualisiert. [Prüfung MS-101](/learn/certifications/exams/ms-101) wird am 2. Februar 2022 aktualisiert. [Prüfung MS-100](/learn/certifications/exams/ms-100) wurde am 30. November 2021 aktualisiert. Laden Sie die Dokumente zur Kompetenzmessung auf den zugehörigen Prüfungsseiten herunter, um Informationen zu kürzlich vorgenommenen und bevorstehenden Änderungen zu erhalten.
+  > Die englischsprachige Version dieser Zertifizierung wurde vor Kurzem aktualisiert. [Examen MS-101](/learn/certifications/exams/ms-101) wurde am 2. Februar 2022 aktualisiert. [Prüfung MS-100](/learn/certifications/exams/ms-100) wurde am 30. November 2021 aktualisiert. Laden Sie die Dokumente zur Kompetenzmessung auf den zugehörigen Prüfungsseiten herunter, um zu sehen, was sich geändert hat.
 
 
   <br/>
